5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1679_1101.log
== TEST (2019-05-02 08:55:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo: ", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$ ", 0.44)
-- OUTPUT:
Entradas:  -56.0  kWh e tipo:  I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:07:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:08:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:10:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.152826
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:16:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:17:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:17:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:18:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:18:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "c")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:18:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.162664
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:19:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:19:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", preco)
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", preco)
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", preco)
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", preco)
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", preco)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:22:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$ ", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", round(preco,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.146725
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5  kWh e tipo  R
Valor total: R$  621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:22:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$ ", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$ ", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$ ", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$ ", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$ ", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$ ", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$  -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:24:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, " kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0  kWh e tipo  I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:25:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, "kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.159582
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas:  -56.0 kWh e tipo  I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas:  955.5 kWh e tipo  R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:25:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas: ", x, "kWh e tipo ", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  -56.0 kWh e tipo  I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:25:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round(preco,2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.189976
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:26:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	preco = x * 0.44
	print("Valor total: R$", round((preco*0.44),2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", round((preco*0.44),2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", round((x*0.44),2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", round((x*0.44),2))
elif((x > 500) and (y == "R")):
	preco = x * 0.65
	print("Valor total: R$", round(preco,2))
elif((x <= 1000) and (y == "C")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 1000) and (y == "C")):
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
elif((x <= 5000) and (y == "I")):
	preco = x * 0.55
	print("Valor total: R$", round(preco,2))
elif((x > 5000) and (y == "I")):	
	preco = x * 0.60
	print("Valor total: R$", round(preco,2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:34:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (x*0.55))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:36:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (round(x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:36:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (round(x*0.55,2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 13
    elif((x > 1000) and (y == "C")):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:37:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 13
    elif((x > 1000) and (y == "C")):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:38:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:38:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.173746
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 16:40:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 16:43:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (x*0.55))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 16:45:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (x*0.55))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-03 16:45:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", (x*0.44))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", (x*0.65))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", (x*0.55))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", (x*0.60))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", (x*0.55))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", (x*0.60))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.857119
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 16:48:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", round((x*0.44),2))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", round((x*0.65),2))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.60),2))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", round((x*0.60),2))
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-03 16:49:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	print("Valor total: R$", round((x*0.44),2))
elif((x > 500) and (y == "R")):
	print("Valor total: R$", round((x*0.65),2))
elif((x <= 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 1000) and (y == "C")):
	print("Valor total: R$", round((x*0.60),2))
elif((x <= 5000) and (y == "I")):
	print("Valor total: R$", round((x*0.55),2))
elif((x > 5000) and (y == "I")):
	print("Valor total: R$", round((x*0.60),2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.640072
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 17:26:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if ((x <= 500) and (y == "R")):
	total = x * 0.44
	print("Valor total: R$", round((x*0.44),2))
elif((x > 500) and (y == "R")):
	total = x * 0.65
	print("Valor total: R$", total)
elif((x <= 1000) and (y == "C")):
	total = x * 0.55
	print("Valor total: R$", total)
elif((x > 1000) and (y == "C")):
	total = x * 0.60
	print("Valor total: R$", total)
elif((x <= 5000) and (y == "I")):
	total = x * 0.55
	print("Valor total: R$", total)
elif((x > 5000) and (y == "I")):
	total = x * 0.60
	print("Valor total: R$", total)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 09:46:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if((y == "R" or y == "I" or y == "C") and (x > 0)):
	if ((x <= 500) and (y == "R")):
		total = x * 0.44
		print("Valor total: R$", round(total,2))
	elif((x > 500) and (y == "R")):
		total = x * 0.65
		print("Valor total: R$", round(total,2))
	elif((x <= 1000) and (y == "C")):
		total = x * 0.55
		print("Valor total: R$", round(total,2))
	elif((x > 1000) and (y == "C")):
		total = x * 0.60
		print("Valor total: R$", round(total,2))
	elif((x <= 5000) and (y == "I")):
		total = x * 0.55
		print("Valor total: R$", round(total,2))
	elif((x > 5000) and (y == "I")):
		total = x * 0.60
		print("Valor total: R$", round(total,2))
	else:
		print("Dados invalidos")
-- EXECUTION TIME:
0.588922
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 09:46:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Consumo de energia: "))
y = input("Tipo de instalacao: ")
print("Entradas:", x, "kWh e tipo", y)
if((y == "R" or y == "I" or y == "C") and (x > 0)):
	if ((x <= 500) and (y == "R")):
		total = x * 0.44
		print("Valor total: R$", round(total,2))
	elif((x > 500) and (y == "R")):
		total = x * 0.65
		print("Valor total: R$", round(total,2))
	elif((x <= 1000) and (y == "C")):
		total = x * 0.55
		print("Valor total: R$", round(total,2))
	elif((x > 1000) and (y == "C")):
		total = x * 0.60
		print("Valor total: R$", round(total,2))
	elif((x <= 5000) and (y == "I")):
		total = x * 0.55
		print("Valor total: R$", round(total,2))
	elif((x > 5000) and (y == "I")):
		total = x * 0.60
		print("Valor total: R$", round(total,2))
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.627794
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
